# nixpanel

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: codeql.yml
nixclient/: index.html  package.json  vite.config.ts
nixclient/src/: App.tsx  api.ts
nixpanel-accounts/: Cargo.toml
nixpanel-accounts/src/: main.rs
nixpanel-api/: Cargo.toml
nixpanel-api/migrations/: 0001_initial.sql
nixpanel-api/src/: auth.rs  config.rs  error.rs  main.rs  section.rs  state.rs
nixpanel-api/src/routes/: accounts.rs  auth.rs  dashboard.rs  databases.rs  dns.rs  email.rs  me.rs  mod.rs  services.rs
nixpanel-common/: Cargo.toml
nixpanel-common/src/: lib.rs
nixpanel-services/: Cargo.toml
nixpanel-services/src/: main.rs
nixpanel-sysinfo/: Cargo.toml
nixpanel-sysinfo/src/: main.rs
nixserver/: index.html  package.json  vite.config.ts
nixserver/src/: App.tsx  api.ts  index.css
