[package]
name    = "nixpanel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nixpanel"
path = "src/main.rs"

[dependencies]
nixpanel-common = { path = "../nixpanel-common" }

axum         = { version = "0.7", features = ["macros"] }
tokio        = { version = "1", features = ["full"] }
tower-http   = { version = "0.5", features = ["cors"] }

sqlx         = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono"] }

serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

jsonwebtoken = "9"
argon2       = { version = "0.5", features = ["std"] }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy            = "0.15"
chrono             = { version = "0.4", features = ["serde"] }
thiserror          = "1"
anyhow             = "1"
